# raspberry-temperature-rust

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Rocket.toml  database.sql  deny.toml  rust_temp.service  rust_temperature.service  table_upgrade.sql
src/: db.rs  display.rs  main.rs  temp.rs  web.rs
static/css/: styles.css
static/js/: process.js
templates/: index.html.hbs
