[package]
name = "raspberrypi-temperature-rust"
version = "0.1.0"
authors = ["Cristian Rojas <injcristianrojas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
openssl = { version = "0.10.40", features = ["vendored"] }
pwr-hd44780 = "0.1.3"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
rocket = "0.4.10"
rocket-include-static-resources = "0.9.6"
rusqlite = "0.25.4"
schedule_recv = "0.1.0"
serde = "1.0.130"
serde_derive = "1.0.132"
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
w1_therm_reader = "0.1.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["handlebars_templates", "json", "serve"]